<resources>
    <string name="app_name">PetChat.Client</string>
    <string name="action_settings">Settings</string>

    <string name="login_version_text">PetChat, version %s (%d)</string>
    <string name="login_switch_to_registry_button_text">Нет аккаунта?</string>
    <string name="login_switch_to_login_button_text">У меня уже есть аккаунт</string>

    <string name="chats_pull_tooltip_default">Потяните, чтобы перейти в архив</string>
    <string name="chats_pull_tooltip_archive">Потяните, чтобы выйти из архива</string>

    <string name="new_chat_title">Создать новый чат</string>
    <string name="search_users_hint">Shortname или никнейм юзера…</string>
    <string name="text_no_content">Здесь ничего нет…</string>

    <string name="message_hint">Напишите что-нибудь…</string>

    <string name="user_typing">печатает…</string>
    <string name="user_online">online</string>
    <string name="user_offline">offline</string>
    <string name="user_last_seen">был(а) в сети %s</string>

    <string name="message_action_copy">Скопировать текст</string>
    <string name="message_action_edit">Редактировать</string>
    <string name="message_action_delete">Удалить</string>
    <string name="message_edited_mark">(ред.)</string>

    <string name="password_not_safe">Пароль не соответствует требованиям безопасности:\n- минимум одна заглавная буква\n- минимум одна цифра\n- минимум один спецсимвол\n- длина не менее 8 символов</string>
    <string name="passwords_not_equals">Пароли должны совпадать.</string>

    <string name="confirmation_delete_chat">Вы действительно хотите удалить чат %s?</string>
    <string name="confirmation_delete_message">Удалить %s?</string>
</resources>